@@ -41,9 +41,7 @@ struct context {
 };
 
 /* prototype definitions */
-void av_zeroconf_setup(const AFPConfig *configs);
-int av_zeroconf_run(void);
+void av_zeroconf_register(const AFPConfig *configs);
 int av_zeroconf_unregister(void);
-void av_zeroconf_shutdown(void);
 
 #endif   /* AFPD_AVAHI_H */
